update the attendance logic and immprove the logs